TAG: no tag
DATE: 07/11/2012
STAFF: lec
CHANGES:
1) backupDB.sh: obsolete; removed

TAG: femover-5-0-1-5
DATE: 06/04/2012
STAFF: jsb
CHANGES:
1) updated allele_to_image_gatherer.py to exclude image associations for 
	alleles which have been deleted

TAG: femover-5-0-1-4
DATE: 06/01/2012
STAFF: jsb
CHANGES:
1) added comments to tables, columns, and indexes for all tables
2) added clustered indexes to many tables to aid performance based on common
	usage patterns

TAG: femover-5-0-1-3
DATE: 05/21/2012
STAFF: jsb
CHANGES:
1) fixed bug in mapping SNP IDs to batch query markers
2) added expression_assay_sequence_num table (ordering of assays)
3) added term_ancestor_simple table (unique ancestor terms, no paths)
4) updated ReferenceCitations to allow ordering by mini citations

TAG: femover-5-0-1-2
DATE: 05/11/2012
STAFF: jsb
CHANGES:
1) fixed constructor calls for a few classes

TAG: femover-5-0-1-1
DATE: 05/10/2012
STAFF: jsb
CHANGES:
1) fixed bug for when a SNP is missing an ID

TAG: femover-5-0-1-0
DATE: 05/10/2012
STAFF: jsb
CHANGES:
1) added comments and clustering indexes to several tables
2) allowed curly braces in data
3) added several tables for later GXD release
4) added extra ordering for annotations

TAG: femover-5-0-0-11
DATE: 03/29/2012
STAFF: jsb
CHANGES:
1) dialed back parallelism further to help falas survive a run

TAG: femover-5-0-0-10
DATE: 03/29/2012
STAFF: jsb
CHANGES:
1) various additions for 5.x (GXD) data
2) bug fixes for 5.0 beta

TAG: femover-5-0-0-9
DATE: 03/22/2012
STAFF: jsb
CHANGES:
1) various bug fixes after alpha 2
2) changed handling of GO annotations with ND evidence code

TAG: femover-5-0-0-8
DATE: 03/14/2012
STAFF: jsb
CHANGES:
1) fixed a few counts
2) integrated the anatomical dictionary into the vocab & term tables
3) added expression results
4) reduced parallelization when writing to database to avoid errors on falas

TAG: femover-5-0-0-7
DATE: 02/29/2012
STAFF: jsb
CHANGES:
1) fixed typo in buildDatabase.py